2005-02-11  Bradley Bell  <btb@icculus.org>

	* debian/control: build-dep on libphysfs-dev

	* arch/ogl/gr.c: use GLint for arb_max_textures

	* arch/ogl/Makefile.am: added internal.h to dist

	* Makefile.am, arch/win32/Makefile.am: remove old files from dist

2005-01-25  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/carbon/conf.h, arch/ogl/gr.c, include/loadgl.h: on Carbon,
	dynamically find and load the OpenGL library on carbon

	* main/editor/macro.c: use physfs instead of non-existing cflib.h

	* main/editor/medwall.c: use wall_close_door_num, not wall_close_door

	* main/editor/medwall.c: include cntrlcen.h

	* ui/barbox.c, ui/number.c: pass int*, not short* to gr_get_string_size

	* include/ui.h, ui/barbox.c: make ui_barbox_update return void

	* patching file ui/file.c, ui/listbox.c, file ui/mouse.c, ui/scroll.c,
	ui/window.c: use timer_get_fixed_seconds instead of TICKER macro

	* ui/number.c: s/inputbox/Inputbox/

	* ui/ui.c: InstallErrorHandler() no longer exists, don't use it anymore

	* main/bmread.c: externalize N_ObjBitmaps & remove_char, solve conflict

	* main/editor/autosave.c, main/editor/editor.h, main/editor/group.c,
	main/editor/kgame.c, main/editor/kmine.c, main/editor/macro.c,
	main/gamesave.c: s/128/PATH_MAX

	* include/pstypes.h, main/newmenu.c: clean up path/file length macros

	* ui/inputbox.c, ui/keypad.c: use unsigned char when comparing to > 127

	* ui/mouse.c, file ui/popup.c, ui/window.c: comment out uses of
	mouse_set_limits and mouse_set_pos (we don't want to limit user)

	* ui/menubar.c: specify int type for state2_alt_down

	* main/editor/eglobal.c: remove variable New_segment (is now a macro)

	* main/piggy.c: call bm_read_all even if EDITOR is defined

	* main/gamesave.c: if LVL can't be found, try filename that was passed

	* main/mission.c: ensure mission name is properly terminated

2005-01-24  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* 2d/font.c: fix bug #2167: some characters would not display because