@@ -1,3 +1,8 @@
+2005-02-24  Chris Taylor  <chris@icculus.org>
+
+	* include/physfsx.h: use PHYSFSX_openReadBuffered and 
+	PHYSFSX_openWriteBuffered, where appropriate
+
 2005-02-11  Bradley Bell  <btb@icculus.org>
 
 	* debian/control: build-dep on libphysfs-dev
